SERVER-94231 Do not fail queries when queryStats fails to compute the key (#27401)

GitOrigin-RevId: 30a07f67c5f9159d5847538bae191248409b7046