src/mongo/db/pipeline/document_source_query_stats.cpp
@@ -260,7 +260,7 @@ boost::optional<Document> DocumentSourceQueryStats::toDocument(
             SerializationOptions::kRepresentativeQueryShapeSerializeOptions,
             SerializationContext::stateDefault());
         LOGV2_DEBUG(7349403,
-                    3,
+                    2,
                     "Error encountered when applying hmac to query shape, will not publish "
                     "queryStats for this entry.",
                     "status"_attr = ex.toStatus(),
